Fail decodeAudioFileData() when duration is unknown.

This API as currently written can only work with streams of a
known duration, so explicitly fail instead of misinterpreting
a massive 64-bit value as the actual duration.

BUG=668849
TEST=new unittest and layout test.

Review-Url: https://codereview.chromium.org/2537603003
Cr-Commit-Position: refs/heads/master@{#435118}

Former-commit-id: f7f6a8ef3024fe72f77d74426e69a8f3fa54c3f5